--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@tailwindcss/vite": "^4.1.13",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
